--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
@@ -30,22 +30,13 @@
                         <umb-box-header title="Vote for the package"
                                         description="If you enjoy using this package, please do vote up on the project page, thank you.">
                             <div class="umb-button">
-                                <a href="https://our.umbraco.com/packages/backoffice-extensions/contentment/" target="_blank" rel="noopener" class="btn umb-button__button btn-success umb-button--m" ng-click="vm.vote(true)">
+                                <a href="https://our.umbraco.com/packages/backoffice-extensions/contentment/" target="_blank" rel="noopener" class="btn umb-button__button btn-success umb-button--l">
                                     <span class="umb-button__content">
-                                        <umb-icon icon="icon-fa fa-thumbs-up" class="umb-button__icon mr0"></umb-icon>
-                                        <span class="sr-only">Vote up</span>
+                                        <umb-icon icon="icon-fa fa-thumbs-up" class="umb-button__icon mr2"></umb-icon>
+                                        <span>Vote up</span>
                                     </span>
                                 </a>
                             </div>
-                            <div class="umb-button">
-                                <a href="#" class="btn umb-button__button btn-danger umb-button--m" ng-click="vm.vote(false)" prevent-default>
-                                    <span class="umb-button__content">
-                                        <umb-icon icon="icon-fa fa-thumbs-down fa-flip-horizontal" class="umb-button__icon mr0"></umb-icon>
-                                        <span class="sr-only">Vote down</span>
-                                    </span>
-                                </a>
-                            </div>
-                            <img ng-if="vm.nggyu" ng-src="https://leekelleher.com/umbraco/contentment/assets/rickroll.gif" style="position:absolute;bottom:0;right:0;z-index:1;">
                         </umb-box-header>
                     </umb-box>
 
