Fixed "lkGroupBy" filter bug
The `memoize` function needed to have a `hashFunction` passed through,
otherwise the items would be used as the cache key,
meaning they'd be returned in the wrong context.
See #213 for a detailed explanation.

Fixes #213

--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
@@ -29,7 +29,7 @@
                                            auto-focus="true">
                         </umb-search-filter>
 
-                        <div ng-repeat="(label, items) in vm.items | lkGroupBy:'group'">
+                        <div ng-repeat="(label, items) in vm.items | lkGroupBy:'group':vm.cacheKey">
                             <h5 ng-if="label != 'undefined' && results.length > 0" ng-bind="label"></h5>
                             <ul class="umb-actions umb-actions-child">
                                 <li class="umb-action" ng-repeat="item in items | orderBy:vm.orderBy | filter:vm.searchTerm as results">
