ItemPickerOverlay - wraps item's name in `<span>`
Dunno why, I prefer `ng-bind` over raw `{{ ... }}` expressions.

--- a/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.overlay.html
@@ -45,7 +45,7 @@
                             <button type="button" class="btn-reset umb-card-grid-item" title="{{ item.name }}" ng-click="vm.select(item)">                              
                                 <span>
                                     <umb-icon icon="{{item.selected ? 'icon-check color-green' : item.icon || vm.defaultIcon}}" class="large icon"></umb-icon>
-                                    {{item.name}}
+                                    <span ng-bind="item.name"></span>
                                 </span>
                             </button>
                         </li>
