--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.overlay.html
@@ -107,6 +107,26 @@
                 </umb-box-content>
             </umb-box>
 
+            <umb-box ng-if="vm.reusableItems.length > 0">
+                <umb-box-header title-key="contentTypeEditor_reuse"></umb-box-header>
+                <umb-box-content>
+                    <ul class="umb-actions umb-actions-child">
+                        <li class="umb-action" ng-repeat="item in vm.reusableItems | filter:vm.searchTerm as results">
+                            <button type="button" class="btn-reset umb-action-link" ng-click="vm.tree(item)">
+                                <umb-icon icon="{{item.icon}}" class="large icon" ng-class="item.icon"></umb-icon>
+                                <span class="menu-label">
+                                    <span ng-bind="item.name"></span>
+                                    <small ng-bind="item.description"></small>
+                                </span>
+                            </button>
+                        </li>
+                        <li class="alert alert-danger" ng-if="results.length == 0">
+                            <span>No items found for '<em ng-bind="vm.searchTerm"></em>'.</span>
+                        </li>
+                    </ul>
+                </umb-box-content>
+            </umb-box>
+
             <umb-empty-state ng-if="vm.items.length === 0" position="center">
                 <p>There are no items available to add.</p>
             </umb-empty-state>
