ContentBlocks - removed "icon" from value
The "icon" shouldn't have been stored in the property's value.
It should come from the Content Type lookup (cache).

--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-cards.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-cards.html
@@ -10,6 +10,7 @@
                               allow-edit="vm.allowEdit"
                               allow-remove="vm.allowRemove"
                               allow-sort="vm.allowSort"
+                              get-item-icon="vm.populateIcon"
                               get-item-name="vm.populateName"
                               on-add="vm.add"
                               on-edit="vm.edit"
