--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-stack.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-stack.html
@@ -10,6 +10,7 @@
                               allow-edit="vm.allowEdit"
                               allow-remove="vm.allowRemove"
                               allow-sort="vm.allowSort"
+                              get-item-icon="vm.populateIcon"
                               get-item-name="vm.populateName"
                               on-add="vm.add"
                               on-edit="vm.edit"
