ContentBlocks - updated to use new (combined) component
I'm leaving the old display-mode HTML files around for backwards-compatibility.
I'll remove in v4.0 release, as a breaking-change.

--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-cards.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-cards.html
@@ -4,12 +4,13 @@
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 <div ng-controller="Umbraco.Community.Contentment.DataEditors.ContentBlocks.Controller as vm">
-    <contentment-cards-editor ng-model="model.value"
-                              add-button-label-key="'grid_addElement'"
+    <contentment-items-editor ng-model="model.value"
+                              add-button-label-key="vm.addButtonLabelKey"
                               allow-add="vm.allowAdd"
                               allow-edit="vm.allowEdit"
                               allow-remove="vm.allowRemove"
                               allow-sort="vm.allowSort"
+                              display-mode="vm.displayMode"
                               get-item-icon="vm.populateIcon"
                               get-item-name="vm.populateName"
                               on-add="vm.add"
@@ -19,5 +20,5 @@
                               block-actions="vm.blockActions"
                               property-actions="vm.propertyActions"
                               previews="vm.previews">
-    </contentment-cards-editor>
+    </contentment-items-editor>
 </div>
