--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-list.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-list.html
@@ -4,18 +4,21 @@
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 <div ng-controller="Umbraco.Community.Contentment.DataEditors.ContentBlocks.Controller as vm">
-    <contentment-list-editor ng-model="model.value"
-                             add-button-label-key="'grid_addElement'"
-                             allow-add="vm.allowAdd"
-                             allow-edit="vm.allowEdit"
-                             allow-remove="vm.allowRemove"
-                             allow-sort="vm.allowSort"
-                             get-item-icon="vm.populateIcon"
-                             get-item-name="vm.populateName"
-                             on-add="vm.add"
-                             on-edit="vm.edit"
-                             on-remove="vm.remove"
-                             on-sort="vm.sort"
-                             property-actions="vm.propertyActions">
-    </contentment-list-editor>
+    <contentment-items-editor ng-model="model.value"
+                              add-button-label-key="vm.addButtonLabelKey"
+                              allow-add="vm.allowAdd"
+                              allow-edit="vm.allowEdit"
+                              allow-remove="vm.allowRemove"
+                              allow-sort="vm.allowSort"
+                              display-mode="vm.displayMode"
+                              get-item-icon="vm.populateIcon"
+                              get-item-name="vm.populateName"
+                              on-add="vm.add"
+                              on-edit="vm.edit"
+                              on-remove="vm.remove"
+                              on-sort="vm.sort"
+                              block-actions="vm.blockActions"
+                              property-actions="vm.propertyActions"
+                              previews="vm.previews">
+    </contentment-items-editor>
 </div>
