Add input type to the view

--- a/src/Umbraco.Community.Contentment/DataEditors/TextInput/text-input.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/TextInput/text-input.html
@@ -17,7 +17,7 @@
                ng-trim="false"
                id="{{model.alias}}"
                class="umb-property-editor umb-textstring"
-               type="text"
+               type="{{vm.inputType}}"
                list="{{vm.dataListId}}"
                autocomplete="{{vm.autoComplete}}"
                spellcheck="{{vm.spellCheck}}"
