TextboxList - small feature
If the item key matches a valid HTML5 input type,
e.g. "email", "tel", etc.
Then the `type` attribute will be set to the same.

--- a/src/Umbraco.Community.Contentment/DataEditors/TextboxList/textbox-list.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/TextboxList/textbox-list.html
@@ -17,7 +17,7 @@
                   ng-if="vm.hideName === false"></span>
         </label>
         <div class="umb-property-editor">
-            <input type="text"
+            <input type="{{vm.inputTypes.includes(key) ? key : 'text'}}"
                    class="umb-textstring -full-width-input"
                    id="{{_id}}"
                    ng-model="model.value[key]"
