--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
@@ -15,7 +15,7 @@
                         <div class="umb-panel-header-name" ng-bind="vm.title"></div>
                         <div class="umb-panel-header-locked-description" ng-bind="vm.version"></div>
                     </div>
-                    <div style="padding: 0 20px"><lee-was-here></lee-was-here></div>
+                    <div style="margin: 5px 20px 0"><lee-was-here></lee-was-here></div>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
                             <div ng-if="vm.telemetryEnabled === true">
                                 <h5 class="mt0">Telemetry</h5>
                                 <p>By default, the package sends telemetry data about which property-editors are being used (from Contentment only). For more details about the data being captured and transparency on the analysis, please visit <a href="https://leekelleher.com/umbraco/contentment/telemetry/" target="_blank" rel="noopener"><strong>leekelleher.com/umbraco/contentment/telemetry</strong></a>.</p>
-                                <p>If you would prefer to opt-out and disable the telemetry feature, you can <a href="https://github.com/leekelleher/umbraco-contentment/blob/develop/docs/telemetry.md#disable-telemetry-feature" target="_blank" rel="noopener" ><strong>find a code snippet</strong> on the telemetry documentation page</a>.</p>
+                                <p>If you would prefer to opt-out and disable the telemetry feature, you can <a href="https://github.com/leekelleher/umbraco-contentment/blob/develop/docs/telemetry.md#disable-telemetry-feature" target="_blank" rel="noopener"><strong>find a code snippet</strong> on the telemetry documentation page</a>.</p>
                             </div>
                             <div ng-if="vm.telemetryEnabled === false">
                                 <h5 class="mt0">Telemetry</h5>
@@ -58,7 +58,7 @@
 
                             <div>
                                 <h5 class="mt0">Tree dashboard</h5>
-                                <p>If you would like to remove this page and tree item from the Settings section, you can <a href="https://github.com/leekelleher/umbraco-contentment/blob/develop/docs/tree-dashboard.md#disable-tree-dashboard" target="_blank" rel="noopener" ><strong>find a code snippet</strong> on the tree dashboard documentation page</a>.</p>
+                                <p>If you would like to remove this page and tree item from the Settings section, you can <a href="https://github.com/leekelleher/umbraco-contentment/blob/develop/docs/tree-dashboard.md#disable-tree-dashboard" target="_blank" rel="noopener"><strong>find a code snippet</strong> on the tree dashboard documentation page</a>.</p>
                             </div>
 
                         </umb-box-content>
