[WIP] ContentBlocks - Templated Block
ref: https://github.com/leekelleher/umbraco-contentment/discussions/278

--- a/src/Umbraco.Community.Contentment/DataEditors/DataPicker/data-picker.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/DataPicker/data-picker.html
@@ -15,6 +15,7 @@
                               default-icon="vm.defaultIcon"
                               display-mode="vm.displayMode"
                               get-item="vm.populate"
+                              item-template="vm.itemTemplate"
                               on-add="vm.add"
                               on-remove="vm.remove"
                               property-actions="vm.propertyActions">
