--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
@@ -12,6 +12,7 @@
                               allow-sort="vm.allowSort"
                               display-mode="vm.displayMode"
                               get-item="vm.populate"
+                              item-template="vm.itemTemplate"
                               on-add="vm.add"
                               on-edit="vm.edit"
                               on-remove="vm.remove"
