Dashboard - added GitHub sponsors guilt trip :flushed:

--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
@@ -41,6 +41,17 @@
                     </umb-box>
 
                     <umb-box>
+                        <umb-box-header title="Sponsorship">
+                            <a href="https://github.com/sponsors/leekelleher?o=esb" target="_blank" rel="noopener">
+                                <umb-icon icon="medium icon-fa fa-github" class="icon medium mr0"></umb-icon>
+                            </a>
+                        </umb-box-header>
+                        <umb-box-content>
+                            <p>Whilst Contentment is a free and open-source package, I have invested a huge amount of time and effort into its product design, development and maintenance. If you enjoy using these powerful property-editors and want to see me continue my efforts with more quality editors, <a href="https://github.com/sponsors/leekelleher?o=esb" target="_blank" rel="noopener"><strong>please consider supporting my development with a GitHub sponsorship</strong>.</a></p>
+                        </umb-box-content>
+                    </umb-box>
+
+                    <umb-box>
                         <umb-box-header title="Feature options"></umb-box-header>
                         <umb-box-content>
 
