--- a/src/Umbraco.Community.Contentment/DataEditors/DataList/data-list.preview.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/DataList/data-list.preview.html
@@ -22,6 +22,13 @@
         </div>
         <div ng-switch-when="loaded">
 
+            <div class="umb-readonlyvalue" ng-if="vm.property.config.items.length > 30">
+                <details class="umb-property-editor--limit-width alert" ng-class="{ 'alert-danger': vm.property.config.items.length >= 50, 'alert-warning': vm.property.config.items.length < 50 }">
+                    <summary>There are <strong ng-bind="vm.property.config.items.length"></strong> items avaliable in this data source.</summary>
+                    <p>To avoid an unpleasant editor experience or lagging browser performance, please consider trying the <strong>Data Picker</strong> property editor, as it has been designed with improved performance in mind, with support for search querying and pagination.</p>
+                </details>
+            </div>
+
             <umb-tabs-nav ng-if="vm.tabs"
                           tabs="vm.tabs"
                           on-tab-change="vm.changeTab(tab)">
