--- a/src/Umbraco.Community.Contentment/DataEditors/Buttons/buttons.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/Buttons/buttons.html
@@ -10,7 +10,7 @@
                 ng-repeat="item in vm.items"
                 ng-class="{ 'umb-button--selected' : item.selected }"
                 label="{{vm.hideName === false ? item.name : null}}"
-                title="{{item.name}}"
+                title="{{item.name}}, {{item.description}}"
                 icon="{{vm.hideIcon === false ? (item.icon || vm.defaultIcon) + vm.iconExtras : null}}"
                 disabled="item.disabled">
     </umb-button>
