ContentBlocks - support for "disabled" blocks
e.g. if the underlying Element Type is removed.

--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
@@ -11,8 +11,7 @@
                               allow-remove="vm.allowRemove"
                               allow-sort="vm.allowSort"
                               display-mode="vm.displayMode"
-                              get-item-icon="vm.populateIcon"
-                              get-item-name="vm.populateName"
+                              get-item="vm.populate"
                               on-add="vm.add"
                               on-edit="vm.edit"
                               on-remove="vm.remove"
