--- a/src/Umbraco.Community.Contentment/DataEditors/DataPicker/data-picker.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/DataPicker/data-picker.overlay.html
@@ -1,4 +1,4 @@
-<!-- Copyright © 2023 Lee Kelleher.
+<!-- Copyright Â© 2023 Lee Kelleher.
    - This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
@@ -15,7 +15,7 @@
 
         <umb-editor-container>
 
-            <div class="umb-control-group">
+            <div class="umb-control-group" ng-if="vm.hideSearch === false">
                 <div class="form-search">
                     <umb-search-filter input-id="contentment-datapicker-search"
                                        model="vm.searchOptions.query"
