--- a/src/Umbraco.Community.Contentment/DataEditors/IconPicker/icon-picker.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/IconPicker/icon-picker.html
@@ -1,4 +1,4 @@
-﻿<!-- Copyright © 2013-present Umbraco.
+<!-- Copyright © 2013-present Umbraco.
    - This Source Code has been derived from Umbraco CMS.
    - https://github.com/umbraco/Umbraco-CMS/blob/release-8.1.0/src/Umbraco.Web.UI.Client/src/views/propertyeditors/mediapicker/mediapicker.html
    - https://github.com/umbraco/Umbraco-CMS/blob/release-8.17.0/src/Umbraco.Web.UI.Client/src/views/propertyeditors/listview/icon.prevalues.html
@@ -33,10 +33,13 @@
             </ul>
         </div>
     </div>
-    <button ng-if="vm.size === 'small'" type="button" class="btn-reset umb-panel-header-icon" ng-click="vm.pick()" ng-class="{'-placeholder': !model.value }" title="{{model.value}}">
-        <umb-icon icon="{{model.value}}" class="icon" ng-if="model.value"></umb-icon>
-        <span class="umb-panel-header-icon-text" ng-if="!model.value">
-            <localize key="settings_addIcon">Add icon</localize>
-        </span>
-    </button>
+    <div ng-if="vm.size === 'small'" class="flex">
+        <button type="button" class="btn-reset umb-panel-header-icon" ng-click="vm.pick()" ng-class="{'-placeholder': !model.value }" title="{{model.value}}">
+            <umb-icon icon="{{model.value}}" class="icon" ng-if="model.value"></umb-icon>
+            <span class="label-add" ng-if="!model.value">
+                <localize key="settings_addIcon">Add icon</localize>
+            </span>
+        </button>
+        <button ng-if="model.value" aria-label="Remove" type="button" class="btn-reset umb-button--xxs" ng-click="vm.remove()">Clear selection</button>
+    </div>
 </div>
