ItemPicker: Make use of component's "property-actions" attribute

--- a/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.html
@@ -1,4 +1,4 @@
-﻿<!-- Copyright © 2019 Lee Kelleher.
+<!-- Copyright © 2019 Lee Kelleher.
    - This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
@@ -15,6 +15,7 @@
                               on-add="vm.add"
                               on-edit="vm.edit"
                               on-remove="vm.remove"
-                              on-sort="vm.sort">
+                              on-sort="vm.sort"
+                              property-actions="vm.propertyActions">
     </contentment-items-editor>
 </div>
